# wgpu-effect-compositor-proto

./: Cargo.toml  build.rs
src/: app.rs  macros.rs  main.rs  render.rs
src/render/: glass.rs  pointer.rs  raymarching.rs  shape.rs  system.rs  wallpaper.rs
src/render/glass/: layer.rs
src/render/shape/: column.rs  component.rs  light_map.rs  silhouette.rs
src/shaders/: glass.wesl  glass_shapes.wesl  light_maps.wesl  raymarching.wesl  silhouette_sdf.wesl  wallpaper.wesl
src/shaders/shape/: kind.wesl  sdf.wesl
src/shaders/shape/norm/: l_infinity.wesl  l_infinity_m.wesl  lp.wesl  lpm.wesl  unit.wesl
src/shaders/shape/raymarching/: march.wesl  ray.wesl  scene.wesl
src/shaders/shape/sdf/: anti_alias.wesl  approx.wesl  blend.wesl  exact.wesl  extrude.wesl  lp_norm.wesl  lpm_norm.wesl
src/shaders/shape/storage/: bindings.wesl
src/shaders/util/: anti_alias.wesl  color.wesl  ease.wesl  norm.wesl  quad_vertex.wesl  ratio.wesl  raymarch.wesl  sdf.wesl  system.wesl  trig.wesl
src/shaders/util/raymarch/: blend.wesl  march.wesl  ray.wesl  scene.wesl  shape.wesl
