[package]
name = "effect-compositor-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "25.0.0"
winit = "0.30.10"
bytemuck = { version = "1.23.0", features = ["derive"] }
wesl = { git = "https://github.com/wgsl-tooling-wg/wesl-rs", version = "0.1.2" }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
wesl = { git = "https://github.com/wgsl-tooling-wg/wesl-rs", version = "0.1.2" }
